; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/fatten/fatfs/extr_ff.c_dir_find.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/fatten/fatfs/extr_ff.c_dir_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32*, i32, i32*, i64, i32, i32 }

@FR_OK = common dso_local global i64 0, align 8
@DIR_Name = common dso_local global i64 0, align 8
@FR_NO_FILE = common dso_local global i64 0, align 8
@DIR_Attr = common dso_local global i64 0, align 8
@AM_VOL = common dso_local global i32 0, align 4
@AM_LFN = common dso_local global i32 0, align 4
@AM_MASK = common dso_local global i32 0, align 4
@DDEM = common dso_local global i32 0, align 4
@LDIR_Chksum = common dso_local global i64 0, align 8
@LLEF = common dso_local global i32 0, align 4
@NSFLAG = common dso_local global i64 0, align 8
@NS_LOSS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_5__*)* @dir_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dir_find(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = call i64 @dir_sdi(%struct.TYPE_5__* %7, i32 0)
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @FR_OK, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i64, i64* %4, align 8
  store i64 %13, i64* %2, align 8
  br label %64

14:                                               ; preds = %1
  br label %15

15:                                               ; preds = %58, %14
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 6
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 5
  %21 = load i32, i32* %20, align 8
  %22 = call i64 @move_window(i32 %18, i32 %21)
  store i64 %22, i64* %4, align 8
  %23 = load i64, i64* %4, align 8
  %24 = load i64, i64* @FR_OK, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %15
  br label %62

27:                                               ; preds = %15
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  store i32* %30, i32** %6, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = load i64, i64* @DIR_Name, align 8
  %33 = getelementptr inbounds i32, i32* %31, i64 %32
  %34 = load i32, i32* %33, align 4
  store i32 %34, i32* %5, align 4
  %35 = load i32, i32* %5, align 4
  %36 = icmp eq i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %27
  %38 = load i64, i64* @FR_NO_FILE, align 8
  store i64 %38, i64* %4, align 8
  br label %62

39:                                               ; preds = %27
  %40 = load i32*, i32** %6, align 8
  %41 = load i64, i64* @DIR_Attr, align 8
  %42 = getelementptr inbounds i32, i32* %40, i64 %41
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* @AM_VOL, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %55, label %47

47:                                               ; preds = %39
  %48 = load i32*, i32** %6, align 8
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 3
  %51 = load i32*, i32** %50, align 8
  %52 = call i32 @mem_cmp(i32* %48, i32* %51, i32 11)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %55, label %54

54:                                               ; preds = %47
  br label %62

55:                                               ; preds = %47, %39
  %56 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %57 = call i64 @dir_next(%struct.TYPE_5__* %56, i32 0)
  store i64 %57, i64* %4, align 8
  br label %58

58:                                               ; preds = %55
  %59 = load i64, i64* %4, align 8
  %60 = load i64, i64* @FR_OK, align 8
  %61 = icmp eq i64 %59, %60
  br i1 %61, label %15, label %62

62:                                               ; preds = %58, %54, %37, %26
  %63 = load i64, i64* %4, align 8
  store i64 %63, i64* %2, align 8
  br label %64

64:                                               ; preds = %62, %12
  %65 = load i64, i64* %2, align 8
  ret i64 %65
}

declare dso_local i64 @dir_sdi(%struct.TYPE_5__*, i32) #1

declare dso_local i64 @move_window(i32, i32) #1

declare dso_local i32 @mem_cmp(i32*, i32*, i32) #1

declare dso_local i64 @dir_next(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
